[package]
name = "short-it"
authors = ["GrayMind75 <me@benyaamin.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
dirs = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
mysql = "22.1.0"